--- a/website/versioned_docs/version-2.0.1/appendices/config.mdx
+++ b/website/versioned_docs/version-2.0.1/appendices/config.mdx
@@ -482,7 +482,7 @@ nonebot.init(superusers={"123123123"})
 - **类型**: `set[str]`
 - **默认值**: `set()`
 
-机器人昵称，通常协议适配器会根据用户是否 @user 或者是否以机器人昵称开头来判断是否是向机器人发送的消息。
+机器人昵称，通常协议适配器会根据用户是否 @bot 或者是否以机器人昵称开头来判断是否是向机器人发送的消息。
 
 <Tabs groupId="configMethod">
   <TabItem value="dotenv" label="dotenv" default>
