--- a/website/versioned_docs/version-2.0.0rc4/appendices/config.mdx
+++ b/website/versioned_docs/version-2.0.0rc4/appendices/config.mdx
@@ -185,7 +185,7 @@ superusers = config.superusers
 from pydantic import BaseModel, validator
 
 class Config(BaseModel):
-    weather_api_key: str
+    weather_api_key: str = "weather"
     weather_command_priority: int = 10
     weather_plugin_enabled: bool = True
 
