--- a/website/versioned_docs/version-2.0.1/appendices/config.mdx
+++ b/website/versioned_docs/version-2.0.1/appendices/config.mdx
@@ -62,7 +62,7 @@ export CUSTOM_CONFIG="config in environment variables"
 
 那最终 NoneBot 所读取的内容为环境变量中的内容，即 `config in environment variables`。
 
-:::warning 注意
+:::caution 注意
 NoneBot 不会自发读取未被定义的配置项的环境变量，如果需要读取某一环境变量需要在 dotenv 配置文件中进行声明。
 :::
 
