--- a/website/versioned_docs/version-2.0.1/quick-start.mdx
+++ b/website/versioned_docs/version-2.0.1/quick-start.mdx
@@ -13,7 +13,7 @@ import Messenger from "@site/src/components/Messenger";
 
 # 快速上手
 
-:::warning 前提条件
+:::caution 前提条件
 
 - 请确保你的 Python 版本 >= 3.8
 - **我们强烈建议使用虚拟环境进行开发**，如果没有使用虚拟环境，请确保已经卸载可能存在的 NoneBot v1！！！
