--- a/website/docs/best-practice/alconna/README.mdx
+++ b/website/docs/best-practice/alconna/README.mdx
@@ -31,15 +31,30 @@ slug: /best-practice/alconna/
 
 在**项目目录**下执行以下命令：
 
+<Tabs groupId="install">
+<TabItem value="cli" label="使用 nb-cli">
+
 ```shell
 nb plugin install nonebot-plugin-alconna
 ```
 
-或
+</TabItem>
+<TabItem value="pip" label="使用 pip">
 
 ```shell
 pip install nonebot-plugin-alconna
 ```
+
+</TabItem>
+
+<TabItem value="pdm" label="使用 pdm">
+
+```shell
+pdm add nonebot-plugin-alconna
+```
+
+</TabItem>
+</Tabs>
 
 ## 导入插件
 
@@ -87,7 +102,7 @@ async def got_location(location: str = ArgPlainText()):
 ```python {5-10,14-16,18-19}
 from nonebot.rule import to_me
 from arclet.alconna import Alconna, Args
-from nonebot_plugin_alconna import Match, AlconnaMatcher, on_alconna
+from nonebot_plugin_alconna import Match, on_alconna
 
 weather = on_alconna(
     Alconna("天气", Args["location?", str]),
@@ -98,9 +113,9 @@ weather.shortcut("天气预报", {"command": "天气"})
 
 
 @weather.handle()
-async def handle_function(matcher: AlconnaMatcher, location: Match[str]):
+async def handle_function(location: Match[str]):
     if location.available:
-        matcher.set_path_arg("location", location.result)
+        weather.set_path_arg("location", location.result)
 
 @weather.got_path("location", prompt="请输入地名")
 async def got_location(location: str):
