--- a/website/docs/best-practice/alconna/uniseg.mdx
+++ b/website/docs/best-practice/alconna/uniseg.mdx
@@ -3,6 +3,9 @@ sidebar_position: 5
 description: 通用消息组件
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
 # 通用消息组件
 
 `uniseg` 模块属于 `nonebot-plugin-alconna` 的子插件，其提供了一套通用的消息组件，用于在 `nonebot-plugin-alconna` 下构建通用消息。
