--- a/website/docs/best-practice/alconna/uniseg.mdx
+++ b/website/docs/best-practice/alconna/uniseg.mdx
@@ -379,7 +379,7 @@ async def tt():
 
 ## 消息发送
 
-前面提到, 通用消息可用 `UniMessage.send` 发送自身：
+前面提到，通用消息可用 `UniMessage.send` 发送自身：
 
 ```python
 async def send(
