--- a/website/docs/best-practice/alconna/README.mdx
+++ b/website/docs/best-practice/alconna/README.mdx
@@ -12,7 +12,7 @@ import TabItem from '@theme/TabItem';
 
 [`nonebot-plugin-alconna`](https://github.com/nonebot/plugin-alconna) 是一类提供了拓展响应规则的插件。
 该插件使用 [Alconna](https://github.com/ArcletProject/Alconna) 作为命令解析器，
-是一个简单、灵活、高效的命令参数解析器, 并且不局限于解析命令式字符串。
+是一个简单、灵活、高效的命令参数解析器，并且不局限于解析命令式字符串。
 
 该插件提供了一类新的事件响应器辅助函数 `on_alconna`，以及 `AlconnaResult` 等依赖注入函数。
 
