--- a/website/docs/best-practice/alconna/uniseg.mdx
+++ b/website/docs/best-practice/alconna/uniseg.mdx
@@ -12,6 +12,9 @@ import TabItem from "@theme/TabItem";
 
 ## 通用消息段
 
+适配器下的消息段标注会匹配适配器特定的 `MessageSegment`， 而通用消息段与适配器消息段的区别在于：  
+通用消息段会匹配多个适配器中相似类型的消息段，并返回 `uniseg` 模块中定义的 [`Segment` 模型](https://nonebot.dev/docs/next/best-practice/alconna/utils#%E9%80%9A%E7%94%A8%E6%B6%88%E6%81%AF%E6%AE%B5), 以达到**跨平台接收消息**的作用。
+
 `nonebot-plugin-alconna.uniseg` 提供了类似 `MessageSegment` 的通用消息段，并可在 `Alconna` 下直接标注使用：
 
 ```python
@@ -80,13 +83,13 @@ class Other(Segment):
     """其他 Segment"""
 ```
 
-来自各自适配器的消息序列都会经过这些通用消息段对应的标注转换，以达到跨平台接收消息的作用
+此类消息段通过 `UniMessage.export` 可以转为特定的 `MessageSegment`
 
 ## 通用消息序列
 
 `nonebot-plugin-alconna.uniseg` 同时提供了一个类似于 `Message` 的 `UniMessage` 类型，其元素为经过通用标注转换后的通用消息段。
 
-你可以用如下方式获取 `UniMessage` ：
+你可以用如下方式获取 `UniMessage`：
 
 <Tabs groupId="get_unimsg">
 <TabItem value="depend" label="使用依赖注入">
@@ -95,6 +98,7 @@ class Other(Segment):
 
 ```python
 from nonebot_plugin_alconna.uniseg import UniMsg, At, Reply
+
 
 matcher = on_xxx(...)
 
@@ -117,6 +121,7 @@ async def _(msg: UniMsg):
 from nonebot import Message, EventMessage
 from nonebot_plugin_alconna.uniseg import UniMessage
 
+
 matcher = on_xxx(...)
 
 @matcher.handle()
@@ -129,11 +134,12 @@ async def _(message: Message = EventMessage()):
 
 不仅如此，你还可以通过 `UniMessage` 的 `export` 与 `send` 方法来**跨平台发送消息**。
 
-`UniMessage.export` 会通过传入的 `bot: Bot` 参数，或上下文中的 `Bot` 对象读取适配器信息，并使用对应的生成方法把通用消息转为适配器对应的消息序列
+`UniMessage.export` 会通过传入的 `bot: Bot` 参数，或上下文中的 `Bot` 对象读取适配器信息，并使用对应的生成方法把通用消息转为适配器对应的消息序列：
 
 ```python
 from nonebot import Bot, on_command
 from nonebot_plugin_alconna.uniseg import Image, UniMessage
+
 
 test = on_command("test")
 
@@ -148,6 +154,7 @@ async def handle_test():
 from arclet.alconna import Alconna, Args
 from nonebot_plugin_alconna import Match, AlconnaMatcher, on_alconna
 from nonebot_plugin_alconna.uniseg import At,  UniMessage
+
 
 test_cmd = on_alconna(Alconna("test", Args["target?", At]))
 
@@ -166,6 +173,7 @@ async def tt(target: At):
 ```python
 from nonebot import Bot, on_command
 from nonebot_plugin_alconna.uniseg import UniMessage
+
 
 test = on_command("test")
 
@@ -188,6 +196,7 @@ async def handle():
 ```python
 from nonebot_plugin_alconna.uniseg import UniMessage, At
 
+
 msg = UniMessage("Hello")
 msg1 = UniMessage(At("user", "124"))
 msg2 = UniMessage(["Hello", At("user", "124")])
@@ -198,32 +207,95 @@ msg2 = UniMessage(["Hello", At("user", "124")])
 ```python
 from nonebot_plugin_alconna.uniseg import UniMessage, At, Image
 
+
 msg = UniMessage.text("Hello").at("124").image(path="/path/to/img")
 assert msg == UniMessage(
     ["Hello", At("user", "124"), Image(path="/path/to/img")]
 )
 ```
 
-### 获取消息纯文本
+### 拼接消息
 
-类似于 `Message.extract_plain_text()`，用于获取通用消息的纯文本。
-
-```python
-from nonebot_plugin_alconna.uniseg import UniMessage, At
-# 提取消息纯文本字符串
-assert UniMessage(
-    [At("user", "1234"), "text"]
-).extract_plain_text() == "text"
-```
-
-### 遍历
-
-通用消息序列继承自 `List[Segment]` ，因此可以使用 `for` 循环遍历消息段。
+`str`、`UniMessage`、`Segment` 对象之间可以直接相加，相加均会返回一个新的 `UniMessage` 对象：
 
 ```python
-for segment in message:  # type: Segment
-    ...
+# 消息序列与消息段相加
+UniMessage("text") + Text("text")
+# 消息序列与字符串相加
+UniMessage([Text("text")]) + "text"
+# 消息序列与消息序列相加
+UniMessage("text") + UniMessage([Text("text")])
+# 字符串与消息序列相加
+"text" + UniMessage([Text("text")])
+# 消息段与消息段相加
+Text("text") + Text("text")
+# 消息段与字符串相加
+Text("text") + "text"
+# 消息段与消息序列相加
+Text("text") + UniMessage([Text("text")])
+# 字符串与消息段相加
+"text" + Text("text")
 ```
+
+如果需要在当前消息序列后直接拼接新的消息段，可以使用 `Message.append`、`Message.extend` 方法，或者使用自加：
+
+```python
+msg = UniMessage([Text("text")])
+# 自加
+msg += "text"
+msg += Text("text")
+msg += UniMessage([Text("text")])
+# 附加
+msg.append(Text("text"))
+# 扩展
+msg.extend([Text("text")])
+```
+
+### 使用消息模板
+
+`UniMessage.template` 同样类似于 `Message.template`，可以用于格式化消息，大体用法参考 [消息模板](../../tutorial/message#使用消息模板)。
+
+这里额外说明 `UniMessage.template` 的拓展控制符
+
+相比 `Message`，UniMessage 对于 {:XXX} 做了另一类拓展。其能够识别例如 At(xxx, yyy) 或 Emoji(aaa, bbb)的字符串并执行
+
+以 At(...) 为例：
+
+```python title=使用通用消息段的拓展控制符
+>>> from nonebot_plugin_alconna.uniseg import UniMessage
+>>>  UniMessage.template("{:At(user, target)}").format(target="123")
+UniMessage(At("user", "123"))
+>>> UniMessage.template("{:At(type=user, target=id)}").format(id="123")
+UniMessage(At("user", "123"))
+>>> UniMessage.template("{:At(type=user, target=123)}").format()
+UniMessage(At("user", "123"))
+```
+
+而在 `AlconnaMatcher` 中，{:XXX} 更进一步地提供了获取 `event` 和 `bot` 中的属性的功能：
+
+```python title=在AlconnaMatcher中使用通用消息段的拓展控制符
+from arclet.alconna import Alconna, Args
+from nonebot_plugin_alconna import At, Match, UniMessage, AlconnaMatcher, on_alconna
+
+
+test_cmd = on_alconna(Alconna("test", Args["target?", At]))
+
+@test_cmd.handle()
+async def tt_h(matcher: AlconnaMatcher, target: Match[At]):
+    if target.available:
+        matcher.set_path_arg("target", target.result)
+
+@test_cmd.got_path(
+    "target",
+    prompt=UniMessage.template("{:At(user, $event.get_user_id())} 请确认目标")
+)
+async def tt():
+    await test_cmd.send(
+      UniMessage.template("{:At(user, $event.get_user_id())} 已确认目标为 {target}")
+    )
+```
+
+另外也有 `$message_id` 与 `$target` 两个特殊值。
 
 ### 检查消息段
 
@@ -236,7 +308,7 @@ At("user", "1234") in message
 At in message
 ```
 
-我们还可以使用 `only` 方法来检查消息中是否仅包含指定的消息段。
+我们还可以使用 `only` 方法来检查消息中是否仅包含指定的消息段：
 
 ```python
 # 是否都为 "test"
@@ -245,12 +317,36 @@ message.only("test")
 message.only(Text)
 ```
 
+### 获取消息纯文本
+
+类似于 `Message.extract_plain_text()`，用于获取通用消息的纯文本：
+
+```python
+from nonebot_plugin_alconna.uniseg import UniMessage, At
+
+
+# 提取消息纯文本字符串
+assert UniMessage(
+    [At("user", "1234"), "text"]
+).extract_plain_text() == "text"
+```
+
+### 遍历
+
+通用消息序列继承自 `List[Segment]` ，因此可以使用 `for` 循环遍历消息段：
+
+```python
+for segment in message:  # type: Segment
+    ...
+```
+
 ### 过滤、索引与切片
 
-消息序列对列表的索引与切片进行了增强，在原有列表 `int` 索引与 `slice` 切片的基础上，支持 `type` 过滤索引与切片。
+消息序列对列表的索引与切片进行了增强，在原有列表 `int` 索引与 `slice` 切片的基础上，支持 `type` 过滤索引与切片：
 
 ```python
 from nonebot_plugin_alconna.uniseg import UniMessage, At, Text, Reply
+
 
 message = UniMessage(
     [
@@ -272,14 +368,14 @@ message[At, 0] == At("user", "1234")
 message[Text, 0:2] == UniMessage([Text("text1"), Text("text2")])
 ```
 
-我们也可以通过消息序列的 `include`、`exclude` 方法进行类型过滤。
+我们也可以通过消息序列的 `include`、`exclude` 方法进行类型过滤：
 
 ```python
 message.include(Text, At)
 message.exclude(Reply)
 ```
 
-同样的，消息序列对列表的 `index`、`count` 方法也进行了增强，可以用于索引指定类型的消息段。
+同样的，消息序列对列表的 `index`、`count` 方法也进行了增强，可以用于索引指定类型的消息段：
 
 ```python
 # 指定类型首个消息段索引
@@ -288,96 +384,14 @@ message.index(Text) == 1
 message.count(Text) == 2
 ```
 
-此外，消息序列添加了一个 `get` 方法，可以用于获取指定类型指定个数的消息段。
+此外，消息序列添加了一个 `get` 方法，可以用于获取指定类型指定个数的消息段：
 
 ```python
 # 获取指定类型指定个数的消息段
 message.get(Text, 1) == UniMessage([Text("test1")])
 ```
 
-### 拼接消息
-
-`str`、`UniMessage`、`Segment` 对象之间可以直接相加，相加均会返回一个新的 `UniMessage` 对象。
-
-```python
-# 消息序列与消息段相加
-UniMessage("text") + Text("text")
-# 消息序列与字符串相加
-UniMessage([Text("text")]) + "text"
-# 消息序列与消息序列相加
-UniMessage("text") + UniMessage([Text("text")])
-# 字符串与消息序列相加
-"text" + UniMessage([Text("text")])
-# 消息段与消息段相加
-Text("text") + Text("text")
-# 消息段与字符串相加
-Text("text") + "text"
-# 消息段与消息序列相加
-Text("text") + UniMessage([Text("text")])
-# 字符串与消息段相加
-"text" + Text("text")
-```
-
-如果需要在当前消息序列后直接拼接新的消息段，可以使用 `Message.append`、`Message.extend` 方法，或者使用自加。
-
-```python
-msg = UniMessage([Text("text")])
-# 自加
-msg += "text"
-msg += Text("text")
-msg += UniMessage([Text("text")])
-# 附加
-msg.append(Text("text"))
-# 扩展
-msg.extend([Text("text")])
-```
-
-### 使用消息模板
-
-`UniMessage.template` 同样类似于 `Message.template`，可以用于格式化消息。大体用法参考 [消息模板](../../tutorial/message#使用消息模板)。
-
-这里额外说明 `UniMessage.template` 的拓展控制符
-
-相比 `Message`，UniMessage 对于 {:XXX} 做了另一类拓展。其能够识别例如 At(xxx, yyy) 或 Emoji(aaa, bbb)的字符串并执行
-
-以 At(...) 为例：
-
-```python title=使用通用消息段的拓展控制符
->>> from nonebot_plugin_alconna.uniseg import UniMessage
->>>  UniMessage.template("{:At(user, target)}").format(target="123")
-UniMessage(At("user", "123"))
->>> UniMessage.template("{:At(type=user, target=id)}").format(id="123")
-UniMessage(At("user", "123"))
->>> UniMessage.template("{:At(type=user, target=123)}").format()
-UniMessage(At("user", "123"))
-```
-
-而在 `AlconnaMatcher` 中，{:XXX} 更进一步地提供了获取 `event` 和 `bot` 中的属性的功能
-
-```python title=在AlconnaMatcher中使用通用消息段的拓展控制符
-from arclet.alconna import Alconna, Args
-from nonebot_plugin_alconna import At, Match, UniMessage, AlconnaMatcher, on_alconna
-
-test_cmd = on_alconna(Alconna("test", Args["target?", At]))
-
-@test_cmd.handle()
-async def tt_h(matcher: AlconnaMatcher, target: Match[At]):
-    if target.available:
-        matcher.set_path_arg("target", target.result)
-
-@test_cmd.got_path(
-    "target",
-    prompt=UniMessage.template("{:At(user, $event.get_user_id())} 请确认目标")
-)
-async def tt():
-    await test_cmd.send(
-      UniMessage.template("{:At(user, $event.get_user_id())} 已确认目标为 {target}")
-    )
-```
-
-另外也有 `$message_id` 与 `$target` 两个特殊值。
-
-## 消息发送
+### 消息发送
 
 前面提到，通用消息可用 `UniMessage.send` 发送自身：
 
@@ -397,6 +411,7 @@ async def send(
 ```python
 from nonebot import Event, Bot
 from nonebot_plugin_alconna.uniseg import UniMessage, Target
+
 
 matcher = on_xxx(...)
 
