--- a/website/docs/appendices/config.mdx
+++ b/website/docs/appendices/config.mdx
@@ -579,7 +579,7 @@ nonebot.init(command_start={"/", ""}, command_sep={".", " "})
 - **类型**: `timedelta`
 - **默认值**: `timedelta(minutes=2)`
 
-用户会话超时时间，配置格式参考 [Datetime Types](https://docs.pydantic.dev/latest/api/standard_library_types/#datetimetimedelta)，可以为单位为秒的 `int | float` 等。
+用户会话超时时间，配置格式参考 [Datetime Types](https://docs.pydantic.dev/latest/api/standard_library_types/#datetimetimedelta)。
 
 <Tabs groupId="configMethod">
   <TabItem value="dotenv" label="dotenv" default>
